# haskellorls

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  Main.hs  README.md  cabal.project  cabal.project.freeze  haskellorls.cabal  haskellorls.hs  hie.yaml
.github/workflows/: assets.yml  ci.yml  format.yml  release.yml
app/: Main.hs
etc/completions/: haskellorls.bash  haskellorls.fish  haskellorls.zsh
golden-test/: AllOneArgumentNoEnv.goldplate  AllOneArgumentNoEnv.stdout  AlmostAllOneArgumentNoEnv.goldplate  AlmostAllOneArgumentNoEnv.stdout  ClassifyAlwaysOneArgument.goldplate  ClassifyNeverOneArgument.goldplate  ClassifyOneArgumentNoEnv.goldplate  ClassifyOneArgumentNoEnv.stdout  ColorAlwaysOneArgumentNoEnv.goldplate  ColorAlwaysOneArgumentNoEnv.stdout  ColorAlwaysOneArgumentWithLS_COLORS.goldplate  ColorAlwaysOneArgumentWithLS_COLORS.stdout  ColorAutoOneArgumentNoEnv.goldplate  ColorAutoOneArgumentNoEnv.stdout  ColorAutoOneArgumentWithLS_COLORS.goldplate  ColorWithoutOptionArgument.goldplate  ColorWithoutOptionArgument.stdout  CommaOneArgumentEmptyCOLUMNS.goldplate  DereferenceCommandLineOneArgumentLinkedToDirectoryNoEnv.goldplate  DereferenceCommandLineOneDirectoryNoEnv.goldplate  DereferenceCommandLineOneDirectoryNoEnv.stdout  DereferenceCommandLineOneFileNoEnv.goldplate  DereferenceCommandLineOneFileNoEnv.stdout  DereferenceCommandLineOneLinkNoEnv.goldplate  DereferenceCommandLineOneLinkNoEnv.stdout  DereferenceCommandLineOnlyDereferenceOnCommandLine.goldplate  DereferenceCommandLineOnlyDereferenceOnCommandLine.stdout  DereferenceCommandLineSymlinkToDirNoEnv.goldplate  DereferenceCommandLineSymlinkToDirNoEnv.stdout  DereferenceCommandLineSymlinkToDirOnlyDereferenceOnCommandLineSymlinkToDir.goldplate  DereferenceCommandLineSymlinkToDirOnlyDereferenceOnCommandLineSymlinkToDir.stdout  DereferenceOneDirectoryHaveLinkNoEnv.goldplate  DereferenceOneDirectoryHaveLinkNoEnv.stdout  DirectoryMultipleArgumentsNoEnv.goldplate  DirectoryMultipleArgumentsNoEnv.stdout  DirectoryOneArgumentNoEnv.goldplate  DirectoryOneArgumentNoEnv.stdout  FileTypeOneArgumentNoEnv.goldplate  FileTypeOneArgumentNoEnv.stdout  GroupDirectoriesFirstOneArgumentNoEnv.goldplate  (+85 more)
golden-test/NoArgument01/: NoArgumentNoEnv.goldplate  NoArgumentNoEnv.stdout
golden-test/files/: examples04
golden-test/files/examples03/: dir02  file02.txt  file04.txt
localeconv/: .gitignore  CHANGELOG.md  LICENSE  localeconv.cabal
localeconv/src/System/Locale/: LocaleConv.hsc
src/: Haskellorls.hs  Prelude.hs
src/Haskellorls/: Class.hs  Color.hs  Config.hs  Context.hs  Decorator.hs  Depth.hs  Entry.hs  Exception.hs  Field.hs  Filemode.hs  Formatter.hs  Grid.hs  Icon.hs  Indicator.hs  Inode.hs  Link.hs  LsColor.hs  Name.hs  Node.hs  NodeInfo.hs  Option.hs  Ownership.hs  Recursive.hs  Size.hs  Sort.hs  SymbolicLink.hs  Time.hs  Tree.hs  UserInfo.hs  Utils.hs  Walk.hs  WrappedText.hs  YetAnotherString.hs
src/Haskellorls/Color/: Option.hs  Type.hs  Utils.hs
src/Haskellorls/Config/: Context.hs  Datetime.hs  Depth.hs  DeviceNumber.hs  Environment.hs  Filemode.hs  Filetime.hs  Format.hs  Indicator.hs  Inode.hs  Link.hs  Listing.hs  Option.hs  Ownership.hs  Quote.hs  Size.hs  Sort.hs  Time.hs  TimeStyle.hs  TimeType.hs  Tree.hs  When.hs
src/Haskellorls/Config/Filemode/: Entry.hs  Permission.hs
src/Haskellorls/Config/Option/: Color.hs  Format.hs  Hyperlink.hs  Indicator.hs  Quote.hs  Size.hs  Sort.hs  Time.hs  When.hs
src/Haskellorls/Context/: Type.hs
src/Haskellorls/Control/Exception/: Safe.hs
src/Haskellorls/Data/: Infinitable.hs
src/Haskellorls/Data/Gettext/: Extra.hs
src/Haskellorls/Filemode/: Decorator.hs  Entry.hs  Permission.hs  Type.hs
src/Haskellorls/Filemode/Entry/: Decorator.hs  Type.hs
src/Haskellorls/Filemode/Permission/: Decorator.hs  Type.hs
src/Haskellorls/Format/: Grid.hs  Option.hs  Type.hs  Util.hs
src/Haskellorls/Formatter/: Attribute.hs  Context.hs  Escape.hs  Filemode.hs  Icon.hs  Indicator.hs  Inode.hs  Link.hs  Name.hs  Number.hs  Ownership.hs  Quote.hs  Size.hs  SymbolicLink.hs  Time.hs  Tree.hs  WrappedText.hs
src/Haskellorls/Formatter/Filemode/: Entry.hs  Permission.hs
src/Haskellorls/Formatter/Layout/: Grid.hs
src/Haskellorls/Humanize/: FileSize.hs
src/Haskellorls/Hyperlink/: Option.hs  Type.hs
src/Haskellorls/Indicator/: Decorator.hs  Option.hs  Type.hs
src/Haskellorls/Inode/: Type.hs
src/Haskellorls/Lens/: Micro.hs
src/Haskellorls/Link/: Type.hs
src/Haskellorls/LsColor/: Class.hs  Color.hs  Config.hs  Icon.hs  Parser.hs  Type.hs  Util.hs
src/Haskellorls/Name/: Decorator.hs  Type.hs
src/Haskellorls/Ownership/: Decorator.hs  Type.hs
src/Haskellorls/Quote/: Option.hs  Type.hs  Utils.hs
src/Haskellorls/Recursive/: Tree.hs  Utils.hs
src/Haskellorls/Size/: Decorator.hs  Option.hs  Type.hs  Utils.hs
src/Haskellorls/Sort/: Method.hs  Option.hs  Type.hs
src/Haskellorls/System/: Locale.hs
src/Haskellorls/System/OsPath/Posix/: Extra.hs
src/Haskellorls/System/Posix/: PosixString.hs
src/Haskellorls/System/Posix/Files/: ByteString.hs
src/Haskellorls/Time/: Decorator.hs  Option.hs  Type.hs
src/Haskellorls/Tree/: Decorator.hs  Type.hs  Util.hs
src/Haskellorls/Walk/: Dired.hs  Listing.hs  Recursive.hs  Sort.hs  Tree.hs  Utils.hs
test/: ColorTest.hs  Driver.hs  GoldenTest.hs  NodeTest.hs
test/Test/Haskellorls/Config/: TimeStyleSpec.hs
test/Test/Haskellorls/Config/Option/: SizeSpec.hs
test/Test/Haskellorls/Data/: InfinitableSpec.hs
test/Test/Haskellorls/Formatter/: NumberSpec.hs  TimeSpec.hs
test/Test/Haskellorls/Humanize/: FileSizeSpec.hs
