cabal-version:      2.2
name:               haskellorls
version:            0.5.3.0
synopsis:           Haskell implementation of ls
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         12132068+a5ob7r@users.noreply.github.com
author:             a5ob7r
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4
extra-source-files:
  CHANGELOG.md
  README.md

flag rtsopts
  description: Enable -rtsopts
  default:     False
  manual:      True

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

flag selinux
  description: Enable SELinux support
  default:     False
  manual:      True

common common-options
  build-depends:    base >=4.14 && <4.17
  default-language: Haskell2010
  ghc-options:
    -W -Wall -Wcompat -Wredundant-constraints -Wpartial-fields
    -Wunused-packages -Widentities

  if flag(pedantic)
    ghc-options: -Werror

library haskellorls-internal
  import:             common-options
  exposed-modules:
    Haskellorls
    Haskellorls.Class
    Haskellorls.Config
    Haskellorls.Config.Context
    Haskellorls.Config.Depth
    Haskellorls.Config.DeviceNumber
    Haskellorls.Config.Environment
    Haskellorls.Config.Filemode
    Haskellorls.Config.Filemode.Entry
    Haskellorls.Config.Filemode.Permission
    Haskellorls.Config.Format
    Haskellorls.Config.Indicator
    Haskellorls.Config.Inode
    Haskellorls.Config.Link
    Haskellorls.Config.Listing
    Haskellorls.Config.Option
    Haskellorls.Config.Option.Color
    Haskellorls.Config.Option.Format
    Haskellorls.Config.Option.Hyperlink
    Haskellorls.Config.Option.Indicator
    Haskellorls.Config.Option.Quote
    Haskellorls.Config.Option.Size
    Haskellorls.Config.Option.Sort
    Haskellorls.Config.Option.Time
    Haskellorls.Config.Option.When
    Haskellorls.Config.Ownership
    Haskellorls.Config.Quote
    Haskellorls.Config.Size
    Haskellorls.Config.Sort
    Haskellorls.Config.Time
    Haskellorls.Config.Tree
    Haskellorls.Config.When
    Haskellorls.Control.Exception.Safe
    Haskellorls.Formatter
    Haskellorls.Formatter.Attribute
    Haskellorls.Formatter.Context
    Haskellorls.Formatter.Escape
    Haskellorls.Formatter.Filemode
    Haskellorls.Formatter.Filemode.Entry
    Haskellorls.Formatter.Filemode.Permission
    Haskellorls.Formatter.Icon
    Haskellorls.Formatter.Indicator
    Haskellorls.Formatter.Inode
    Haskellorls.Formatter.Layout.Grid
    Haskellorls.Formatter.Link
    Haskellorls.Formatter.Name
    Haskellorls.Formatter.Ownership
    Haskellorls.Formatter.Quote
    Haskellorls.Formatter.Size
    Haskellorls.Formatter.SymbolicLink
    Haskellorls.Formatter.Time
    Haskellorls.Formatter.Tree
    Haskellorls.Formatter.WrappedText
    Haskellorls.Humanize.FileSize
    Haskellorls.LsColor
    Haskellorls.LsColor.Class
    Haskellorls.LsColor.Color
    Haskellorls.LsColor.Config
    Haskellorls.LsColor.Icon
    Haskellorls.NodeInfo
    Haskellorls.System.Posix.Files.ByteString
    Haskellorls.Walk
    Haskellorls.Walk.Dired
    Haskellorls.Walk.Listing
    Haskellorls.Walk.Recursive
    Haskellorls.Walk.Sort
    Haskellorls.Walk.Tree
    Haskellorls.Walk.Utils

  other-modules:      Paths_haskellorls
  autogen-modules:    Paths_haskellorls
  hs-source-dirs:     src
  default-extensions:
    CPP
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    StrictData
    TupleSections
    TypeApplications
    UndecidableInstances

  build-depends:
    , bytestring            ^>=0.11.3.1
    , containers            ^>=0.6.5
    , data-default-class    ^>=0.1.2
    , extra                 ^>=1.7.10
    , filepath-bytestring   ^>=1.4.2.1.10
    , Glob                  ^>=0.10.2
    , hostname              ^>=1.0
    , mtl                   ^>=2.2.2
    , natural-sort          ^>=0.1.2
    , optparse-applicative  ^>=0.17.0
    , rawfilepath           ^>=1.0.1
    , safe-exceptions       ^>=0.1.7
    , terminal-size         ^>=0.3.2
    , text                  ^>=2.0
    , time                  ^>=1.12.2
    , unix                  ^>=2.7.2

  if flag(selinux)
    build-depends: selinux
    cpp-options:   -DSELINUX

executable haskellorls
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  haskellorls-internal

  if flag(rtsopts)
    ghc-options: -rtsopts

test-suite test
  import:             common-options
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
    , haskellorls-internal
    , QuickCheck            ^>=2.14.2
    , sydtest               ^>=0.11.0.0

  other-modules:
    Test.Haskellorls.Config.Option.SizeSpec
    Test.Haskellorls.Humanize.FileSizeSpec

  build-tool-depends: sydtest-discover:sydtest-discover -any
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
