cabal-version:      2.2
name:               haskellorls
version:            0.6.0.0
synopsis:           Haskell implementation of ls
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         12132068+a5ob7r@users.noreply.github.com
author:             a5ob7r
tested-with:        GHC ==9.2.7 || ==9.4.4
extra-source-files:
  CHANGELOG.md
  README.md

flag rtsopts
  description: Enable -rtsopts
  default:     False
  manual:      True

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

flag selinux
  description: Enable SELinux support
  default:     False
  manual:      True

common common-options
  build-depends:    base >=4.14 && <4.18
  default-language: Haskell2010
  ghc-options:
    -W -Wall -Wcompat -Wredundant-constraints -Wpartial-fields
    -Wunused-packages -Widentities

  if flag(pedantic)
    ghc-options: -Werror

library haskellorls-internal
  import:             common-options
  exposed-modules:
    Haskellorls
    Haskellorls.Class
    Haskellorls.Config
    Haskellorls.Config.Context
    Haskellorls.Config.DeviceNumber
    Haskellorls.Config.Environment
    Haskellorls.Config.Filemode
    Haskellorls.Config.Filemode.Entry
    Haskellorls.Config.Filemode.Permission
    Haskellorls.Config.Filetime
    Haskellorls.Config.Format
    Haskellorls.Config.Indicator
    Haskellorls.Config.Inode
    Haskellorls.Config.Link
    Haskellorls.Config.Listing
    Haskellorls.Config.Option
    Haskellorls.Config.Ownership
    Haskellorls.Config.Quote
    Haskellorls.Config.Size
    Haskellorls.Config.Sort
    Haskellorls.Config.TimeStyle
    Haskellorls.Config.TimeType
    Haskellorls.Config.Tree
    Haskellorls.Config.When
    Haskellorls.Data.Gettext.Extra
    Haskellorls.Data.Infinitable
    Haskellorls.Formatter
    Haskellorls.Formatter.Attribute
    Haskellorls.Formatter.Filemode
    Haskellorls.Formatter.Indicator
    Haskellorls.Formatter.Layout.Grid
    Haskellorls.Formatter.Name
    Haskellorls.Formatter.Number
    Haskellorls.Formatter.Ownership
    Haskellorls.Formatter.Quote
    Haskellorls.Formatter.Size
    Haskellorls.Formatter.SymbolicLink
    Haskellorls.Formatter.Time
    Haskellorls.Formatter.Tree
    Haskellorls.Formatter.WrappedText
    Haskellorls.Humanize.FileSize
    Haskellorls.Lens.Micro
    Haskellorls.LsColor
    Haskellorls.LsColor.Class
    Haskellorls.LsColor.Color
    Haskellorls.LsColor.Config
    Haskellorls.LsColor.Icon
    Haskellorls.NodeInfo
    Haskellorls.System.Locale
    Haskellorls.System.OsPath.Posix.Extra
    Haskellorls.System.Posix.PosixString
    Haskellorls.Walk
    Haskellorls.Walk.Dired
    Haskellorls.Walk.Listing
    Haskellorls.Walk.Sort
    Haskellorls.Walk.Utils

  other-modules:      Paths_haskellorls
  autogen-modules:    Paths_haskellorls
  hs-source-dirs:     src
  default-extensions:
    BlockArguments
    CPP
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications

  build-depends:
    , bytestring            ^>=0.11.3.1
    , containers            ^>=0.6.5
    , data-default-class    ^>=0.1.2
    , directory             ^>=1.3.8.0
    , env-locale            ^>=1.0.0.1
    , extra                 ^>=1.7.10
    , filepath              ^>=1.4.100.0
    , Glob                  ^>=0.10.2
    , haskell-gettext       ^>=0.1.2.0
    , hostname              ^>=1.0
    , localeconv            ^>=0.1.0.0
    , microlens             ^>=0.4.13.0
    , microlens-mtl         ^>=0.2.0.2
    , microlens-th          ^>=0.4.3.10
    , mtl                   ^>=2.3.1
    , natural-sort          ^>=0.1.2
    , optparse-applicative  ^>=0.17.0
    , safe-exceptions       ^>=0.1.7
    , setlocale             ^>=1.0.0.10
    , template-haskell
    , terminal-size         ^>=0.3.2
    , text                  ^>=2.0
    , time                  ^>=1.12.2
    , transformers          ^>=0.6.1.0
    , unix                  ^>=2.8
    , witch                 >=1.1        && <1.3

  if flag(selinux)
    build-depends: selinux
    cpp-options:   -DSELINUX

executable haskellorls
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  haskellorls-internal

  if flag(rtsopts)
    ghc-options: -rtsopts

test-suite test
  import:             common-options
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
    , haskellorls-internal
    , QuickCheck            ^>=2.14.2
    , sydtest               ^>=0.13.0.3
    , time
    , witch

  other-modules:
    Test.Haskellorls.Config.Option.SizeSpec
    Test.Haskellorls.Config.TimeStyleSpec
    Test.Haskellorls.Data.InfinitableSpec
    Test.Haskellorls.Formatter.NumberSpec
    Test.Haskellorls.Formatter.TimeSpec
    Test.Haskellorls.Humanize.FileSizeSpec

  build-tool-depends: sydtest-discover:sydtest-discover
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
