cabal-version:   2.0
name:            localeconv
version:         0.1.0.0
synopsis:        Haskell binding to localeconv
license:         BSD3
license-file:    LICENSE
author:          a5ob7r
maintainer:      12132068+a5ob7r@users.noreply.github.com
category:        System
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:    System.Locale.LocaleConv
  build-depends:      base >=4.8
  build-tool-depends: hsc2hs:hsc2hs -any
  hs-source-dirs:     src
  default-language:   Haskell2010
